Added background to body
Still not giving up on this project no matter the grade

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ caption {
 body {
 	margin: 0px auto;
 	width:1020px;
-	background: #FFF;
+	background-image: url("../images/metaltextures032.png");
 	
 }
 
