--- a/css/main.css
+++ b/css/main.css
@@ -1,212 +1,130 @@
-/*--------------- CSS for Car Kare Express ---------------*/
-
-/*-------------------- Body Section --------------------*/
-
-body {
-	width: 85.000em; /* 1020px */
-	background-image: url("../images/metaltextures032.png");
-}
 
 h1, h2, h3, h4, h5, h6 { 
 	margin: 0em auto;
 	font-family: 'Paytone One', arial, helvetica; 
-	text-shadow: 0.083em 0.167em 0.333em #FF0; /* 1px 2px 4px */
+	text-shadow: 0.063em 0.125em 0.250em #FF0;
 	color: #000;
-	line-height: 1.500em; /* 18px */
-	text-align: center;
-	border-radius: .2em; /* 2px */
+	line-height: 1.3em;
+	border-radius: .2em;
 }
 
 p {
-	margin: 0.417em; /* 5px */
-	line-height: 1.500em; /* 18px */
-	font: 1em 'Archivo Narrow', arial, helvetica; /* 12px */
+	margin: 0.8em;
+	line-height: 1.563em;
+	font: 1em 'Archivo Narrow', arial, helvetica;
 }
 
 ul, li{
-	font: 1em 'Archivo Narrow', arial, helvetica; /* 12px */
+	font: 1em 'Archivo Narrow', arial, helvetica;
 }
 
 h1 {
-	font: 1.333em; /* 16px */
+	font: 1.2em;
 }
 
 h2 {
-	font: 1.167em; /* 14px */
+	font: 1em;
 }
 
 h3 {
-	font: 1.000em; /* 12px */
+	font: .8em;
 }
 
 h4 {
-	font: 0.833em; /* 10px */
+	font: .6em;
 }
 
 h5 {
-	font: .0.667em; /* 8px */
+	font: .4em;
 }
 
 h6 {
-	font: 0.500em; /* 6px */
+	font: .2em;
 }
 
 a {
 	text-decoration: none;
 }
 
+body {
+	margin: 0em auto;
+	background-image: url("../images/metaltextures032.png");
+}
+
 /*-------------------- contentWrapper Section --------------------*/
 
 #contentWrapper {
-	width: 94.117647058824%; /* 960px */
-	padding: 0.667em; /* 8px */
+	width: 94.117647058824%;  /* 60.000em / 63.750em or  960px / 1020px */
+	padding: 0.500em;
 	background: #FC3;
-	border-radius: 0.417em; /* 5px */
+	border-radius: 0.313em;
 	overflow: hidden;
-	box-shadow: 0.167em 0.333em 0.417em; /* 2px 4px 5px */
+	box-shadow: 0.125em 0.250em 0.313em;
 }
 
 /*-------------------- Header Section --------------------*/
 
 header {
-	width: 92.549019607843%; /* 944px */
+	width: 95.833333333333%; /* 57.500em / 60.000em or 920px / 960px */
 	background: #E0762E;
-	padding: 0.833em 1.667em; /* 10px 20px */
+	padding: 0.625em 1.250em;
 	background-image: url('../images/orange_stripe.png'); 
 	background-repeat: repeat-x;
-	border-top-left-radius: 0.417em; /* 5px */
-	border-top-right-radius: 0.417em; /* 5px */
-	-moz-column-count: 2;
-	
+	border-top-left-radius: 0.313em;
+	border-top-right-radius: 0.313em;
+	/*-moz-column-count: 2;*/
+	overflow: hidden;
 }
 
 header h1 {
-	margin: -2.1em 0em .1em 5em; /* 25px 0px 1px -3px */
-	font-size: 3.000em; /* 36px */
+	margin: -2.58em 0em 0em 10.4em;
+	font-size: 2.125em;
 }
 
 header p {
-	margin: 5em 0em 1em 3.7em; /* 3px 0px 12px 164px  */
-	font-size: 1.667em; /* 20px */
-}
-
-/*-------------------- Aside Section --------------------*/
-
-aside {
-	margin: 0.500em auto; /* 6px */
-	width: 20.833333333333%; /* 200px */
-	padding: 0.417em; /* 5px */
-	float: left;
-	background: #FFF;
-	border-radius: 0.417em; /* 5px */
-	background: url("../images/package_back.jpg");
-	overflow: hidden;
-}
-
-aside h4 {
-	margin: 0.417em auto; /* 5px */
-	text-align: center;
-	text-shadow: .1em .1em .1em #FF0; /* 1px 1px 1px  */
-	box-shadow: .1em .1em .1em #333; /* 1px 1px 1px */
-	background: #FC3;
-	border-radius: 0.167em; /*2px*/
-	color: #000;
-}
-
-aside ul {
-	list-style-type: none;
-	margin: 0.417em auto; /* 5px */
-	padding: 0;
-	overflow: hidden;
-}
-
-aside li {
-	margin: 0.833em auto 1.667em; /* 10px auto 20px */
-	text-align: center;
-} 
-
-/*-------------------- Article --------------------*/
-
-article {
-	margin: 0.500em auto; /* 6px */
-	width: 75.416666666667%; /* 724px */
-	padding: 0.833em; /* 10px */
-	background-image: url('../images/orange_stripe.png'); 
-	background-repeat: repeat-x;
-	background-color: #FFF;
-	float: right;
-	border-radius: 0.417em; /* 5px */
-	overflow: hidden;
-}
-
-article ul {
-	margin: 0.833em auto; /* 10px */
-	width: 93.922651933702%; /* 680px */
-	border: 1px solid #CCC;
-	border-radius: 5px;
-	list-style-type: none;
-	overflow: hidden;
-	box-shadow: 1px 1px 2px #333;
-	background: #FFF;
-	background: url("../images/package_back.jpg");
-
-} 
-
-article li{
-	float: left;
-	margin: 10px 30px;
-	text-align: center;
-	text-shadow: 1px 1px 2px #333;
-}	
-
-article img {
-	display: inline;
-	background: #CCC;
-}
-
-article button {
-	float: right;
-	margin-left: 15px;
-	box-shadow: 1px 1px 2px #333;
+	margin: -.2em 0em 2em 17.9em;
+	font-size: 1.250em;
 }
 
 /*-------------------- Nav Section --------------------*/
 
 nav {
-	width: 998x;
-	height: 30px;
-	margin-top: -24px;
+		width: 91.25%;  /* 60.000em / 63.750em or  960px / 1020px */
+/*width: 98.958333333333%; /* 60.000em / 60.000em or  1020px / 960px */
+	margin-top: -1.125em;
 	background: #000;
-	border: 1px solid #000;
+	/*border: 0.063em solid #000;*/
 }
 
 nav ul {
+	width: 97.916666666667%; /*60.000em; /* 63.750em or  1020px / 960px -59.375em-*/ 
 	list-style-type: none;
-	margin: 1px auto;
+	margin: 0.063em auto;
 	overflow: hidden;
+	padding: 0em;
 }
 
 nav li {
-	width: 150px;
+	width: 9.98em;
 	float: left;
 	background: #FC3;
-	border-radius: 5px;
+	border-radius: 0.313em;
 }
 
 nav a {
 	text-decoration: none;
 	display: block;
-	height: 26px;
-	line-height: 25px;
-	text-shadow: 2px 2px 2px #000;
+	height: 1.625em;
+	line-height: 1.563em;
+	text-shadow: 0.125em 0.125em 0.125em #000;
 	text-align: center;
 	background-image: url('../images/orange_up_button_stripe.png'); 
 	background-repeat: repeat-x;
-	border-radius: 5px;
-	border: 1px solid #333;
+	border-radius: 0.313em;
+	border: 0.063em solid #333;
 }
 
-/*-------------------- Link Colors --------------------*/
+/*-------------------- Link States --------------------*/
 
 Yellow = #FF0
 Dark Gray = #999
@@ -218,7 +136,6 @@ nav a:link {
 	color: #FF0;
 	background: #F90;
 }
-
 nav a:visited {
 	color: #CCC;
 	background: #F90;
@@ -236,25 +153,129 @@ nav a:active {
 	background: #F90;
 }
 
+/*-------------------- Aside --------------------*/
+
+aside {
+	width: 20.833333333333%; /*12.500em / 60.000em or 200px / 960px */
+	margin: 0.375em auto;
+	padding: 0.313em;
+	float: left;
+	background: #FFF;
+	border-radius: 0.313em;
+	background: url("../images/package_back.jpg");
+	overflow: hidden;
+}
+
+aside h4 {
+	margin: 0.313em auto;
+	text-align: center;
+	text-shadow: 0.063em 0.063em 0.063em #FF0;
+	box-shadow: 0.063em 0.063em 0.063em #333;
+	background: #FC3;
+	border-radius: 0.125em;
+	color: #000;
+}
+
+aside ul {
+	list-style-type: none;
+	margin-top: 0.625em;
+	padding: 0;
+	overflow: hidden;
+}
+
+aside li {
+	margin: 0.938em auto;
+	text-align: center;
+} 
+
+/*-------------------- Article --------------------*/
+
+article {
+	width: 75.416666666667%; /* 45.250em / 60.000em or 724px / 960px*/
+	margin: 0.375em auto;
+	padding: 0.625em;
+	background-image: url('../images/orange_stripe.png'); 
+	background-repeat: repeat-x;
+	background-color: #FFF;
+	float: right;
+	border-radius: 0.313em;
+	overflow: hidden;
+}
+
+article ul {
+	width: 93.922651933702%; /* 42.500em /  45.250em or 680px / 724px */ 
+	margin: 0.625em auto;
+	border: 0.063em solid #CCC;
+	border-radius: 0.313em;
+	list-style-type: none;
+	overflow: hidden;
+	box-shadow: 0.063em 0.063em 0.125em #333;
+	background: #FFF;
+	background: url("../images/package_back.jpg");
+} 
+
+article li{
+	width: 14.854117647059%; /* 6.313em / 42.500em or 101px / 680px */
+	float: left;
+	margin: 0.625em 1.875em;
+	text-align: center;
+	text-shadow: 0.063em 0.063em 0.125em #333;
+}	
+
+article img {
+	max-width: 100%;
+	display: block;
+	background: #CCC;
+}
+
+article button {
+	float: right;
+	margin-left: 0.938em;
+	box-shadow: 0.063em 0.063em 0.125em #333;
+}
+
+/*-------------------- quoteButton--------------------*/
+
+.quoteButton {
+	width: 13.812154696133%; /*6.250em; /* 6.250em / 45.250em or 100px / 680px */
+}
+
+.quoteButton ul {
+	width: 13.812154696133%; /*6.250em; /* 6.250em / 45.250em or 100px / 680px */
+	list-style-type: none;
+	overflow: hidden;
+	background: #000;
+}
+
+.quoteButton li {
+	width: 13.812154696133%; /*6.250em; /* 6.250em / 45.250em or 100px / 680px */
+	background: #000;
+}
+
+.quoteButton a {
+	background: #FF3;
+}
+
 /*-------------------- mainSection  div--------------------*/
 
 #mainSection {
-	margin: 0.500em auto; /* 6px */
-	width: 724px;
-	padding: 10px;
+		width: 75.416666666667%; /* 45.250em / 60.000em or 724px / 960px*/
+/*width: 45.250em; /* 724px */
+	margin: 0.375em auto;
+	padding: 0.625em;
 	background: #FFF;
 	float: right;
-	border-radius: 5px;
+	border-radius: 0.313em;
 }
 
 #mainSection p {
 	-moz-column-count: 3;
-	-moz-column-gap: 25px;
+	-moz-column-gap: 1.563em;
 }
 
 #mainSection ul {
-	list-style-image: url('../images/coal_gear.jpg');
 	width: 28.125em;
+	list-style-image: url('../images/coal_gear.jpg');
 	margin-left: 2.500em;
 	overflow: hidden;
 }
@@ -263,58 +284,90 @@ nav a:active {
 	margin: .5em;
 }
 
-/*-------------------- CTA Button --------------------*/
-
-#quoteButton ul{
-	float: right;
-	width: 8em;
-	list-style-type: none;
-	background: #F90;
-	
-	line-height: 1.750em;
-	overflow: hidden;
-}
-
-#quoteButton li{
-	text-align: center;
-	
-}
-
-#quoteButton ul:link {
-	color: #FF0;
-	background: #F90;
-}
-
-#quoteButton ul:visited {
-	color: #CCC;
-	background: #F90;
-}
-
-#quoteButton ul:hover {
-	color: #FF0;
-	background: #C26A03;
-	background-image: url('../images/orange_button_stripe.png'); 
-	background-repeat: repeat-x;
-}
-
-#quoteButton ul:active {
-	color: #FC3;
-	background: #000;
-}
-
-#quoteButton ul: focus: {
-
-}
-
-
 /*-------------------- Footer Section --------------------*/
 
 footer {
-	width: 952px;
-	padding: 5px;
+	width: 98.333333333333%; /* 59.000em; /* 60.000em or 960px / 960px */
+	padding: 0.500em;
 	background-color: #666;
-	border-radius: 5px;
+	border-radius: 0.313em;
 	clear: both;
 	color: #CCC;
 	text-align:center;
 }
+
+
+/*  ======================Media Querries================  */
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media screen and (min-width: 768px) and (max-width: 959px) {
+	body {
+		background-image: url("../images/metaltextures032.png");		
+	}
+	
+	#contentWrapper {
+		background: #FC3;
+	}
+	
+	h2, h3, h4, h5, h6 {
+		text-align: center;
+	}
+}
+
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+	#contentWrapper {
+	 background: #C39;
+	}
+	
+	aside {
+	display: none;
+	}
+	
+	article {
+		float: left;
+		width: 95%;
+		margin: 0.375em auto;
+	}
+	
+	#mainSection {
+		float: left;
+		width: 95%;
+		margin: 0.375em auto;
+	}
+	
+	footer {
+		/*width: 42.813em; */
+		float: right;
+	}
+}
+
+/* Mobile Portrait size to Mobile Landscape Size (devices and browsers) */
+@media only screen and (max-width: 479px) {
+	#contentWrapper {
+	 background: #0F0;
+	}
+	
+	aside {
+	display: none;
+	}
+	
+	article {
+		float: left;
+		width: 95%;
+		margin: 0.375em auto;
+	}
+	
+	#mainSection {
+		float: left;
+		width: 95%;
+		margin: 0.375em auto;
+	}
+	
+	footer {
+		/*width: 42.813em; */
+		float: right;
+	}
+}
+
