--- a/css/cssmain.css
+++ b/css/cssmain.css
@@ -18,8 +18,6 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -46,9 +44,8 @@ q:before, q:after {
 /*-------------------------- Start of General Tags --------------------------*/
 
 h1, h2, h3, h4, h5, h6 { 
-	margin: 0em;
-	font-family: 'Alegreya SC', serif;
-	text-shadow: 0.063em 0.125em 0.250em #FF0;
+	font: bold 1.5em limelight, arial, helvetica, cursive;
+	text-shadow: 0.063em 0.063em 0.063em #FC3;
 	color: #000;
 }
 
@@ -75,9 +72,8 @@ body {
 #outerWrapper {
 	width: 70%; /* 65.000em */
 	margin: 0.313em auto;
-	padding: 0.313em;
-	background: #EBAC02;
-	box-shadow: 0.313em 0.313em 0.313em #666;
+	background: #7E2217;
+	box-shadow: 0.313em 0.313em 0.313em #504A4B;
 }
 /*-------------------------- End of outerWrapper --------------------------*/
 
@@ -85,12 +81,12 @@ body {
 
 #contentWrapper {
 	width: 99.038461538462%  /* 64.375em / 65.000em */
-	margin: 0.313em auto;
-	background: #EBAC02;
-	/*border-radius: 0.188em;
-	border: 0.188em solid #666;*/
+	margin: 0.313em ;
+	background-image: url('../images/orange_stripe.jpg');
+	background-repeat: repeat-x;
 	overflow: hidden;
-	outline: 2px solid yellow;
+	border-radius: 0.250em;
+	outline: 0.125em solid #7E2217;
 }
 /*-------------------------- End of contentWrapper --------------------------*/
 
@@ -98,51 +94,39 @@ body {
 
 header {
 	width: 98.058252427184%; /* 60.625em / 64.375em */
-	margin: 0.313em auto;
+	margin: 0.625em auto;
 	background-image: url('../images/car_kare_logo_3.png'); 
 	background-repeat: no-repeat;
 	height: 4.688em;
 	border-radius: 0.375em;
 }
-
-/*header h1 {
-	position: -0.3em 0em 0em 10.4em;
-}
-
-header p {
-	margin: 1em 0em 2em 17.9em;
-}
 /*-------------------------- End of Header --------------------------*/
-
 
 /*-------------------------- Start of Nav --------------------------*/
 
 nav {
-	width: 59.063em; /*97.938144329897%;  * 59.375em / 60.625em */
-	margin: 0.313em auto;
-	outline: 2px solid yellow;
+	width: 98.058252427184%; /* 60.625em / 64.375em */
+	margin: 0.625em auto;
+	border-radius: 0.125em;
 }
 
 nav ul {
-	/*width: 97.938144329897%;  * 59.375em / 60.625em 
-	margin-left: -2em;*/
+	width: 98.058252427184%; /* 60.625em / 64.375em */
+	margin: auto auto;
 	list-style-type: none;
-	overflow: hidden;
 	border-radius: 0.125em;
-		outline: 2px solid red;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+	padding: 0;
 
 }
 
 nav li {
-	width: 9.89em;
-	/*margin-left: 0.063em;
-	border: 0.063em solid #000;*/
+	width: 16%;  /*9.7em; /*10.10416666666667em / 60.625em */
 	float: left;
-	
+	border: 0.031em solid #7E2217;
 	border-radius: 0.125em;
 	background: #FC3;
-	text-shadow: 0.188em 0.063em 0.188em #666;
-		outline: 2px solid greeen;
+	text-shadow: 0.125em 0.125em 0.125em #7E2217;
 
 }
 
@@ -150,9 +134,9 @@ nav a {
 	text-decoration: none;
 	display: block;
 	text-align: center;
-	background-image: url('../images/orange_up_button_stripe.png'); 
+	background-image: url('../images/orange_button_stripe_rev.png'); 
 	background-repeat: repeat-x;
-	/*line-height: 1.563em;*/
+	line-height: 1.5em;
 }
 /*---------- Start of Link States ----------*/
 
@@ -174,9 +158,9 @@ nav a:visited {
 
 nav a:hover {
 	color: #FF0;
-	background: #C26A03;
+	/*background: #D4B209;*/
 	background-image: url('../images/orange_button_stripe.png'); 
-	background-repeat: repeat-x;
+	background-repeat: repeat-x;*/
 }
 
 nav a:active {
@@ -190,29 +174,31 @@ nav a:active {
 /*-------------------------- Start of Gallery --------------------------*/
 
 #gallery {
-	width: 97.549803921569%; /* 62.188em / 63.750em */
-	margin: -1.250em 0em 0em 0.313em;
-	padding: 0.625em;
-	float: left;
+	width: 	98.058252427184%; /* 60.625em / 64.375em */
+	margin: 4em auto;
 	border-radius: 0.375em;
+	background: url("../images/package_back.jpg");
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
 }
 
 #gallery h3 {
 	text-align: center;
+	background: #D4B209;
+	color: #000;
+	border-bottom: 0.031em solid #7E2217;
 }
 
 #gallery ul {
+	width: 98.969072164948%; /* 60.000em / 60.625em */
 	list-style-type: none;
-	background: url("../images/package_back.jpg");
-	margin-top: 0.625em;
-	padding: 0.625em;
 	border-radius: 0.375em;
-	border: 0.188em solid #666;
+	border: 0.188em #FF0;
 	overflow: hidden;
 }
 
 #gallery li {
-	margin-left: 4.688em;
+	width: 06.666666666667%; /*4em / 60.000em*/ 
+	margin-left: 5.5em;
 	float: left;
 	display: inline;
 }
@@ -225,46 +211,69 @@ nav a:active {
 /*-------------------------- Start of Aside --------------------------*/
 
 aside {
-	width: 21.960784313725%; /* 14.000em / 63.750em */
-	margin: -1.250em 0em 0em 0.313em; 
-	padding: 0.313em;
+	width: 21.747572815534%; /* 14.000em / 64.375em */
+	margin: -0.625em 0em 0em 0.750em;
 	float: left;
-	background: #FFF;
-	border: 0.188em solid #666;
+	background: #EBAC02;
 	border-radius: 0.375em;
 	overflow: hidden;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+aside h3 {
+	text-align: center;
+	background: #D4B209;
+	color: #000;
+	border-bottom: 0.031em solid #7E2217;
 }
 
 aside ul {
-	width: 87.057142857143%; /* 12.188em */
-	list-style-type: none;
-	margin-top: 0.625em;
+	width: 98.214285714286%; /* 13.750em */
+	margin: 0.625em 0 0 0.125em.625em;
 	padding: 0;
 	overflow: hidden;
+	display: inline;
 }
 
 aside li {
-	width: 94.872005251067%; /* 11.563em / 12.188em */
+	width: 100%; /* 13.750em  */
 	margin: 0.938em auto;
 	text-align: center;
+	float: left;
 }
 
-aside img {
-	max-width: 100%;
+aside a {
+	text-decoration: none;
+	display: block;
+	text-align: center;
+	line-height: 1.2em;
 } 
+
+aside a:hover {
+	color: #FF0;
+	background: #7E2217;
+	padding: 0.125em;
+	box-shadow: 0.125em 0.125em 0.125em #000;
+}
 /*-------------------------- End of Aside --------------------------*/
 
 /*-------------------------- Start of Article --------------------------*/
 
 article {
-	width: 71.56862745098%; /* 45.625em / 63.750em */
-	margin: -1.250em 0.313em 0em 0em; 
-	padding: 0.625em;
+	width: 74.509803921569%; /* 47.500em / 63.750em */
+	margin: -0.625em 0em 0em 0.750em;
 	background: url("../images/package_back.jpg");
-	float: right;
-	border: 0.188em solid #666;
+	float: left;
 	border-radius: 0.375em;
 	overflow: hidden;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+article h2 {
+	text-align: center;
+	background: #D4B209;
+	color: #000;
+	border-bottom: 0.031em solid #7E2217;
 }
 
 article ul {
@@ -303,16 +312,24 @@ article img {
 /*-------------------------- Start of Section --------------------------*/
 
 section {
-	width: 71.56862745098%; /* 45.625em / 63.750em */
-	margin: 0.313em 0.313em 0em 0em; 
-	padding: 0.625em;
-	float: right;
-	border-radius: 0.375em;
-	border: 0.188em solid #666;
+	width: 74.509803921569%; /* 47.500em / 63.750em */
+	margin: 0.625em 0em 0em 0.750em;
 	background: url("../images/package_back.jpg");
+	float: left;
+	border-radius: 0.375em;
+	overflow: hidden;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+section h3 {
+	text-align: center;
+	background: #D4B209;
+	color: #000;
+	border-bottom: 0.031em solid #7E2217;
 }
 
 section p {
+	padding: 0.625em;
 	-moz-column-count: 3;
 	-moz-column-gap: 1.563em;
 }
