made some css corrections
updated index to point to updated css file name

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ nav ul {
 }
 
 nav li {
-	width: 16.445360824742%; /* 9.72em / 60.625em   58.188em*/
+	width: 16.445360824742%; /* 9.72em / 60.625em */
 	float: left;
 	border: 0.031em solid #7E2217;
 	border-radius: 0.125em;
