--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1.5em;
+	font: normal 100%/1.5;
 }
 ol, ul {
 	list-style: none;
@@ -42,11 +42,24 @@ q:before, q:after {
 /* -------------------------- End of CSS RESET --------------------------*/
 
 /*-------------------------- Start of General Tags --------------------------*/
+h1 {
+	font: bold  3.125em/1.5 limelight, arial, helvetica, cursive; /* 50.000px */
+	color: #000;
+	text-indent: 2em;
+	width: 25em;
+	margin: 0em 5em;
+	text-shadow: 0.063em 0.063em 0.063em #FC3;
+}
 
-h1, h2, h3, h4, h5, h6 { 
-	font: bold 1.5em limelight, arial, helvetica, cursive;
+ h2, h3, h4, h5, h6 { 
+	font: bold  1.125em/1.5 limelight, arial, helvetica, cursive;
 	text-shadow: 0.063em 0.063em 0.063em #FC3;
 	color: #000;
+}
+
+p {
+	font: 1em/1.5 arial, helvetica, cursive;
+	margin: 0.313em 1.250em;
 }
 
 a {
@@ -55,7 +68,15 @@ a {
 }
 
 .header {
-	text-indent: 350px;
+	text-indent: 21.875em;
+}
+
+.top_text {
+	font: 1.5em;
+	text-align: center;
+	background: #D4B209;
+	color: #000;
+	border-bottom: 0.031em solid #7E2217;
 }
 
 /*-------------------------- End of General Tags --------------------------*/
@@ -64,7 +85,7 @@ a {
 
 body {
 	margin: 0em auto;
-	background-image: url("../images/metaltextures032.png");
+	background: url("../images/metaltextures032.png");
 }
 /*-------------------------- End of Body --------------------------*/
 
@@ -72,7 +93,7 @@ body {
 
 #outerWrapper {
 	width: 70%; /* 65.000em */
-	margin: 0.313em auto;
+	margin: 0.481538461538% auto; /* 0.313em / 65.000em */
 	background: #7E2217;
 	box-shadow: 0.313em 0.313em 0.313em #504A4B;
 }
@@ -81,10 +102,9 @@ body {
 /*-------------------------- Start of contentWrapper --------------------------*/
 
 #contentWrapper {
-	width: 99.038461538462%  /* 64.375em / 65.000em */
-	margin: 0.313em ;
-	background-image: url('../images/orange_stripe.jpg');
-	background-repeat: repeat-x;
+	width: 99.038461538462%; /* 64.375em / 65.000em */
+	margin: 0.486213592233%; /* 0.313em / 64.375em */
+	background: url('../images/orange_stripe.jpg') repeat-x;
 	overflow: hidden;
 	border-radius: 0.250em;
 	outline: 0.125em solid #7E2217;
@@ -95,9 +115,8 @@ body {
 
 header {
 	width: 98.058252427184%; /* 60.625em / 64.375em */
-	margin: 0.625em auto;
-	background-image: url('../images/car_kare_logo_3.png'); 
-	background-repeat: no-repeat;
+	margin: 1.030927835052%; /* 0.625em / 60.625em */
+	background: url('../images/car_kare_logo_3.png') no-repeat; 
 	height: 4.688em;
 	border-radius: 0.375em;
 }
@@ -107,7 +126,7 @@ header {
 
 nav {
 	width: 98.058252427184%; /* 60.625em / 64.375em */
-	margin: 0.625em auto;
+	margin: 1.030927835052% auto; /* 0.625em / 60.625em */
 	border-radius: 0.125em;
 }
 
@@ -134,38 +153,31 @@ nav a {
 	text-decoration: none;
 	display: block;
 	text-align: center;
-	background-image: url('../images/orange_button_stripe_rev.png'); 
-	background-repeat: repeat-x;
+	background: url('../images/orange_button_stripe_rev.png') repeat-x; 
 	line-height: 1.5em;
 }
 /*---------- Start of Link States ----------*/
 
-Yellow = #FF0
-Dark Gray = #999
-Red = #F00
-White = #FFF
-Purple = 99F
-
 nav a:link {
 	color: #FF0;
-	background: #F90;
+	background: url('../images/orange_button_visited_stripe.png') repeat-x;
 }
 
 nav a:visited {
 	color: #FFF;
-	background: #F90;
+	background: #F90 repeat-x;
 }
 
 nav a:hover {
 	color: #FF0;
-	background-image: url('../images/orange_button_stripe.png'); 
-	background-repeat: repeat-x;
-	text-shadow: 0em 0.125em 0.625em #7E2217;
+	background: url('../images/orange_button_stripe.png') repeat-x; 
+	text-shadow: 0.125em 0.125em 0.125em #000;
 }
 
 nav a:active {
-	color: #FC3;
-	background: #F90;
+	color: #000;
+	background: url('../images/orange_button_stripe.png'); 
+	text-shadow: 0.125em 0.125em 0.125em #FF0;
 }
 /*---------- End of Link States ----------*/
 
@@ -175,17 +187,11 @@ nav a:active {
 
 #gallery {
 	width: 	98.058252427184%; /* 60.625em / 64.375em */
-	margin: 2.5em auto;
+	margin: 0.516288659794%; /* 0.313em / 60.625em */
 	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
 	background: url("../images/package_back.jpg");
 	box-shadow: 0.125em 0.125em 0.125em #7E2217;
-}
-
-#gallery h3 {
-	text-align: center;
-	background: #D4B209;
-	color: #000;
-	border-bottom: 0.031em solid #7E2217;
 }
 
 #gallery ul {
@@ -213,24 +219,18 @@ nav a:active {
 
 aside {
 	width: 21.747572815534%; /* 14.000em / 64.375em */
-	margin: -2em 0em 0em 0.750em;
+	margin: 0.313em 0em 0em 0.750em;
 	float: left;
-	background: #EBAC02;
+	background: rgba(225,172,2,0.3);
 	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
 	overflow: hidden;
 	box-shadow: 0.125em 0.125em 0.125em #7E2217;
 }
 
-aside h3 {
-	text-align: center;
-	background: #D4B209;
-	color: #000;
-	border-bottom: 0.031em solid #7E2217;
-}
-
 aside ul {
 	width: 98.214285714286%; /* 13.750em */
-	margin: 0.625em 0 0 0.125em.625em;
+	margin: 0.625em 0 0 0.125em;
 	padding: 0;
 	overflow: hidden;
 	display: inline;
@@ -253,7 +253,6 @@ aside a {
 aside a:hover {
 	color: #FF0;
 	background: #7E2217;
-	padding: 0.125em;
 	text-shadow: 0.125em 0.125em 0.125em #000;
 	box-shadow: 0.125em 0.125em 0.125em #000;
 }
@@ -263,19 +262,13 @@ aside a:hover {
 
 article {
 	width: 74.509803921569%; /* 47.500em / 63.750em */
-	margin: -2em 0em 0em 0.750em;
+	margin: 0.313em 0em 0em 0.750em;
 	background: url("../images/package_back.jpg");
 	float: left;
 	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
 	overflow: hidden;
 	box-shadow: 0.125em 0.125em 0.125em #7E2217;
-}
-
-article h2 {
-	text-align: center;
-	background: #D4B209;
-	color: #000;
-	border-bottom: 0.031em solid #7E2217;
 }
 
 article ul {
@@ -316,22 +309,16 @@ article img {
 section {
 	width: 74.509803921569%; /* 47.500em / 63.750em */
 	margin: 0.625em 0em 0em 0.750em;
-	background: url("../images/package_back.jpg");
+	background: rgba(225,172,2,0.3);
 	float: left;
 	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
 	overflow: hidden;
 	box-shadow: 0.125em 0.125em 0.125em #7E2217;
 }
 
-section h3 {
-	text-align: center;
-	background: #D4B209;
-	color: #000;
-	border-bottom: 0.031em solid #7E2217;
-}
-
 section p {
-	padding: 0.625em;
+	padding: 01.315789473684%  /* 0.625em / 47.500em */
 	-moz-column-count: 3;
 	-moz-column-gap: 1.563em;
 }
@@ -341,21 +328,15 @@ section p {
 /*-------------------------- Start of Footer --------------------------*/
 
 footer {
-	width: 98.969072164948%; /* 60.000em / 60.625em */
-	margin: 0.625em auto;
-
-/*	width: 96.569411764706%; /* 61.563em / 63.750em */
-/*	margin: 0.313em 0em 0em 0.313em;*/
-	padding: 0.625em;
-	float: left;
-	background: #E83F00;
+	width: 98.058252427184%; /* 60.625em / 64.375em */
+	margin: 0.625em  0em 0em 0.750em;
+	padding: 1.030927835052%; /* 0.625em / 60.625em */
+	float: right;
+	background: #FFF/*E83F00;*/
 	border-bottom-right-radius: 0.375em;
 	border-bottom-left-radius: 0.375em;
 }
 
-footer h3 {
-	text-align: center;	
-}
 /*-------------------------- End of Footer --------------------------*/
 
 /*-------------------------- Start of Table --------------------------*/
@@ -363,7 +344,7 @@ footer h3 {
 table {
 	width: 96.569411764706%; /* 61.563em / 63.750em */
 	margin: 0.313em auto;
-	width: border-collpase: collapse;
+	/*border: collapse;*/
 }
 
 th {
@@ -391,18 +372,25 @@ body {
 	background-image: url("../images/metaltextures032.png");
 }
 /*-------------------------- End of Body --------------------------*/
+
+h1 {
+	font: bold  1.250em/1.5 limelight, arial, helvetica, cursive; /* 50.000px */
+	color: #000;
+	text-indent: 2em;
+	width: 25em;
+	margin: 0em 5em;
+	text-shadow: 0.063em 0.063em 0.063em #FC3;
+}
 	
 /*-------------------------- Start of contentWrapper --------------------------*/
 
 #contentWrapper {
-	width: 99.038461538462%  /* 64.375em / 65.000em */
-	margin: 0.313em ;
-	background: #FF0;
-	/*background-image: url('../images/orange_stripe.jpg');
-	background-repeat: repeat-x;*/
+	width: 99.038461538462%;  /* 64.375em / 65.000em */
+	margin: 0.313em;
+	background-image: url('../images/orange_stripe.jpg');
+	background-repeat: repeat-x;
 	overflow: hidden;
 	border-radius: 0.250em;
-	outline: 0.125em solid #7E2217;
 }
 /*-------------------------- End of contentWrapper --------------------------*/
 	
@@ -427,60 +415,366 @@ body {
 	nav a {
 		line-height: 1.3em;
 	}
+	
+/*-------------------------- Start of Article --------------------------*/
+
+article {
+	width: 29.8em;
+	margin: 0.313em 0em 0em 0.750em;
+	background: url("../images/package_back.jpg");
+	float: left;
+	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
+	overflow: hidden;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+article ul {
+	width: 96.028493150685%; /* 43.813em / 45.625em */
+	margin: 0.625em auto 0.625em;
+	list-style-type: none;
+	background: url("../images/package_back.jpg");
+	border-radius: 0.375em;
+	overflow: hidden;
+	padding: 0.625em;
+	}
+
+article li {
+	width: 24.999429393103%; /* 10.953em / 43.813em */
+	float: left;
+	margin: auto;
+}
+
+article img {
+	max-width: 100%;
+	display: block;
+}
+/*-------------------------- End of Article --------------------------*/
+
+/*-------------------------- Start of Section --------------------------*/
+
+section {
+	width: 29.8em;
+	margin: 0.625em 0em 0em 0.750em;
+	background: rgba(225,172,2,0.3);
+	float: left;
+	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
+	overflow: hidden;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+section p {
+	padding: 01.315789473684%  /* 0.625em / 47.500em */
+	-moz-column-count: 3;
+	-moz-column-gap: 1.563em;
+}
+/*-------------------------- End of Section --------------------------*/
+
+/*-------------------------- Start of Footer --------------------------*/
+
+footer {
+	width: 98.058252427184%; /* 60.625em / 64.375em */
+	margin: 0.625em  0em 0em 0.750em;
+	padding: 1.030927835052%; /* 0.625em / 60.625em */
+	float: right;
+	background: #FFF/*E83F00;*/
+	border-bottom-right-radius: 0.375em;
+	border-bottom-left-radius: 0.375em;
+}
+
+/*-------------------------- End of Footer --------------------------*/
 }
 
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-	#contentWrapper {
-	 background: #C39;
+	
+/*-------------------------- Start of Body --------------------------*/
+
+body {
+	margin: 0em auto;
+	background-image: url("../images/metaltextures032.png");
+}
+/*-------------------------- End of Body --------------------------*/
+
+h1 {
+	font: bold  1.250em/1.5 limelight, arial, helvetica, cursive; /* 50.000px */
+	color: #000;
+	text-indent: 2em;
+	width: 25em;
+	margin: 0em 5em;
+	text-shadow: 0.063em 0.063em 0.063em #FC3;
+}
+	
+/*-------------------------- Start of contentWrapper --------------------------*/
+
+#contentWrapper {
+	width: 99.038461538462%;  /* 64.375em / 65.000em */
+	margin: 0.313em;
+	background-image: url('../images/orange_stripe.jpg');
+	background-repeat: repeat-x;
+	overflow: hidden;
+	border-radius: 0.250em;
+}
+/*-------------------------- End of contentWrapper --------------------------*/
+	
+	h2, h3, h4, h5, h6 {
+		text-align: center;
+		line-height: 1.3em;
 	}
 	
-	aside {
-	display: none;
+	header h1 {
+		margin: 0em 0em 0em .1em;
+		font-size: 2.125em;
 	}
 	
-	article {
-		float: left;
-		width: 95%;
-		margin: 0.375em auto;
+	header p {
+		margin: 0em 0em 0em .4em;
 	}
 	
-	#mainSection {
-		float: left;
-		width: 95%;
-		margin: 0.375em auto;
+	nav li{
+		width: 8.063em;
 	}
 	
-	footer {
-		/*width: 42.813em; */
-		float: right;
+	nav a {
+		line-height: 1.3em;
 	}
+	
+/*-------------------------- Start of Article --------------------------*/
+
+article {
+	width: 22.4em;
+	margin: 0.313em 0em 0em 0.750em;
+	background: url("../images/package_back.jpg");
+	float: left;
+	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
+	overflow: hidden;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+article ul {
+	width: 96.028493150685%; /* 43.813em / 45.625em */
+	margin: 0.625em auto 0.625em;
+	list-style-type: none;
+	background: url("../images/package_back.jpg");
+	border-radius: 0.375em;
+	overflow: hidden;
+	padding: 0.625em;
+	}
+
+article li {
+	width: 24.999429393103%; /* 10.953em / 43.813em */
+	float: left;
+	margin: auto;
+}
+
+article img {
+	max-width: 100%;
+	display: block;
+}
+/*-------------------------- End of Article --------------------------*/
+
+/*-------------------------- Start of Section --------------------------*/
+
+section {
+	width: 22.4em;
+	margin: 0.625em 0em 0em 0.750em;
+	background: rgba(225,172,2,0.3);
+	float: left;
+	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
+	overflow: hidden;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+section p {
+	padding: 01.315789473684%  /* 0.625em / 47.500em */
+	-moz-column-count: 3;
+	-moz-column-gap: 1.563em;
+}
+/*-------------------------- End of Section --------------------------*/
+
+/*-------------------------- Start of Footer --------------------------*/
+
+footer {
+	width: 98.058252427184%; /* 60.625em / 64.375em */
+	margin: 0.625em  0em 0em 0.750em;
+	padding: 1.030927835052%; /* 0.625em / 60.625em */
+	float: right;
+	background: #FFF/*E83F00;*/
+	border-bottom-right-radius: 0.375em;
+	border-bottom-left-radius: 0.375em;
+}
+
+/*-------------------------- End of Footer --------------------------*/
 }
 
 /* Mobile Portrait size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {
-	#contentWrapper {
-	 background: #0F0;
+	
+/*-------------------------- Start of Body --------------------------*/
+
+body {
+	margin: 0em auto;
+	background-image: url("../images/metaltextures032.png");
+}
+/*-------------------------- End of Body --------------------------*/
+
+h1 {
+	font: bold  1.250em/1.5 limelight, arial, helvetica, cursive; /* 50.000px */
+	color: #000;
+	text-indent: 2em;
+	width: 25em;
+	margin: 0em 5em;
+	text-shadow: 0.063em 0.063em 0.063em #FC3;
+}
+	
+/*-------------------------- Start of contentWrapper --------------------------*/
+
+#contentWrapper {
+	width: 99.038461538462%;  /* 64.375em / 65.000em */
+	margin: 0.313em;
+	background-image: url('../images/orange_stripe.jpg');
+	background-repeat: repeat-x;
+	overflow: hidden;
+	border-radius: 0.250em;
+}
+/*-------------------------- End of contentWrapper --------------------------*/
+	
+	h2, h3, h4, h5, h6 {
+		text-align: center;
+		line-height: 1.3em;
 	}
 	
-	aside {
-	display: none;
+	header h1 {
+		margin: 0em 0em 0em .1em;
+		font-size: 2.125em;
 	}
 	
-	article {
-		float: left;
-		width: 95%;
-		margin: 0.375em auto;
+	header p {
+		margin: 0em 0em 0em .4em;
 	}
 	
-	#mainSection {
-		float: left;
-		width: 95%;
-		margin: 0.375em auto;
+	nav li{
+		width: 8.063em;
 	}
 	
-	footer {
-		/*width: 42.813em; */
-		float: right;
+	nav a {
+		line-height: 1.3em;
 	}
+	
+/*-------------------------- Start of Aside --------------------------*/
+
+aside {
+	width: 18em; /* 14.000em / 64.375em */
+	margin: 0.313em 0em 0em 0.750em;
+	float: left;
+	background: rgba(225,172,2,0.3);
+	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
+	overflow: hidden;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+aside ul {
+	width: 98.214285714286%; /* 13.750em */
+	margin: 0.625em 0 0 0.125em;
+	padding: 0;
+	overflow: hidden;
+	display: inline;
+}
+
+aside li {
+	width: 100%; /* 13.750em  */
+	margin: 0.938em auto;
+	text-align: center;
+	float: left;
+}
+
+aside a {
+	text-decoration: none;
+	display: block;
+	text-align: center;
+	line-height: 1.2em;
+} 
+
+aside a:hover {
+	color: #FF0;
+	background: #7E2217;
+	text-shadow: 0.125em 0.125em 0.125em #000;
+	box-shadow: 0.125em 0.125em 0.125em #000;
+}
+/*-------------------------- End of Aside --------------------------*/
+
+/*-------------------------- Start of Article --------------------------*/
+
+article {
+	width: 18em;
+	margin: 0.313em 0em 0em 0.750em;
+	background: url("../images/package_back.jpg");
+	float: left;
+	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
+	overflow: hidden;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+article ul {
+	width: 96.028493150685%; /* 43.813em / 45.625em */
+	margin: 0.625em auto 0.625em;
+	list-style-type: none;
+	background: url("../images/package_back.jpg");
+	border-radius: 0.375em;
+	overflow: hidden;
+	padding: 0.625em;
+	}
+
+article li {
+	width: 24.999429393103%; /* 10.953em / 43.813em */
+	float: left;
+	margin: auto;
+}
+
+article img {
+	max-width: 100%;
+	display: block;
+}
+/*-------------------------- End of Article --------------------------*/
+
+/*-------------------------- Start of Section --------------------------*/
+
+section {
+	width: 18em;
+	margin: 0.625em 0em 0em 0.750em;
+	background: rgba(225,172,2,0.3);
+	float: left;
+	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
+	overflow: hidden;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+section p {
+	padding: 01.315789473684%  /* 0.625em / 47.500em */
+	-moz-column-count: 3;
+	-moz-column-gap: 1.563em;
+}
+/*-------------------------- End of Section --------------------------*/
+
+/*-------------------------- Start of Footer --------------------------*/
+
+footer {
+	width: 98.058252427184%; /* 60.625em / 64.375em */
+	margin: 0.625em  0em 0em 0.750em;
+	padding: 1.030927835052%; /* 0.625em / 60.625em */
+	float: right;
+	background: #FFF/*E83F00;*/
+	border-bottom-right-radius: 0.375em;
+	border-bottom-left-radius: 0.375em;
+}
+
+/*-------------------------- End of Footer --------------------------*/
+}
+	
