extended outer wrapper

--- a/css/main.css
+++ b/css/main.css
@@ -381,6 +381,16 @@ body {
 }
 /*-------------------------- End of Body --------------------------*/
 
+/*-------------------------- Start of outerWrapper --------------------------*/
+
+#outerWrapper {
+	width: 90%; /* 65.000em */
+	margin: 0.481538461538% auto; /* 0.313em / 65.000em */
+	background: #7E2217;
+	box-shadow: 0.313em 0.313em 0.313em #504A4B;
+}
+/*-------------------------- End of outerWrapper --------------------------*/
+
 h1 {
 	font: bold  1.250em/1.5 limelight, arial, helvetica, cursive; /* 50.000px */
 	color: #000;
