--- a/css/main.css
+++ b/css/main.css
@@ -997,9 +997,10 @@ nav ul {
 }
 
 nav li {
-	width: 16.445360824742%; /* 9.72em / 60.625em */
+	width: 98.058252427184%; /* 60.625em / 64.375em */
 	float: left;
 	border: 0.031em solid #7E2217;
+	display: block;
 	border-radius: 0.125em;
 	background: #FC3;
 	text-shadow: 0.250em 0.125em 0.125em #7E2217;
@@ -1043,7 +1044,7 @@ nav a:active {
 
 #gallery {
 	width: 	98.058252427184%; /* 60.625em / 64.375em */
-	margin: 0.486213592233%; /*0.313em / 64.375em */
+	margin: 1.941747572816%; /* 1.250em / 64.375em */
 	border-radius: 0.375em;
 	border: 0.031em solid #7E2217;
 	background: url("../images/package_back.jpg");
@@ -1060,7 +1061,7 @@ nav a:active {
 
 #gallery li {
 	width: 06.666666666667%; /* 4em / 60.000em*/ 
-	margin-left: 1.3em;
+	margin-left: 1.7em;
 	float: left;
 	display: inline;
 	padding: 0.313em 0 0 0.313em;
@@ -1075,7 +1076,8 @@ nav a:active {
 
 aside {
 	width: auto; /*21.747572815534%; /* 14.000em / 64.375em */
-	margin: auto; /*0.486213592233%; /*0.313em / 64.375em */
+	margin: 1.941747572816%; /* 1.250em / 64.375em */
+	/*margin: auto; /*0.486213592233%; /*0.313em / 64.375em */
 	float: left;
 	background: rgba(225,172,2,0.3);
 	border-radius: 0.375em;
@@ -1118,7 +1120,8 @@ aside a:hover {
 
 article {
 	width: auto; /*75.243495145631%; /* 48.438em / 64.375em */
-	margin: auto; /*0.486213592233%; /*0.313em / 64.375em */
+	margin: 1.941747572816%; /* 1.250em / 64.375em */
+	/*margin: auto; /*0.486213592233%; /*0.313em / 64.375em */
 	background: url("../images/package_back.jpg");
 	float: left;
 	border-radius: 0.375em;
