modified tablet querry width

--- a/css/main.css
+++ b/css/main.css
@@ -320,8 +320,8 @@ section {
 section p {
 	padding: 0.658947368421%;   /* 0.313em / 47.500em */
 	padding-bottom: .1em;
-	/*-moz-column-count: 3;
-	-moz-column-gap: 1.563em;*/
+	-moz-column-count: 3;
+	-moz-column-gap: 1.563em;
 }
 /*-------------------------- End of Section --------------------------*/
 
@@ -331,9 +331,8 @@ section p {
 footer {
 	width: 98.058252427184%; /* 60.625em / 64.375em */
 	margin: 0.625em  0em 0em 0.750em;
-	/*padding: 1.030927835052%; /* 0.625em / 60.625em */
 	float: right;
-	background: #fff;
+	background: #E83F00;
 	border-bottom-right-radius: 0.375em;
 	border-bottom-left-radius: 0.375em;
 }
@@ -454,7 +453,7 @@ nav ul {
 }
 
 nav li {
-	width: 16.186391752577%; /*16.445360824742%; /* 9.813em      9.72em / 60.625em */
+	width: 16.186391752577%; /* 9.813em / 60.625em */
 	float: left;
 	border: 0.031em solid #7E2217;
 	border-radius: 0.125em;
@@ -633,7 +632,7 @@ footer {
 	margin: 0.625em  0em 0em 0.750em;
 	padding: 1.030927835052%; /* 0.625em / 60.625em */
 	float: right;
-	background: #FFF/*E83F00;*/
+	background: #E83F00;
 	border-bottom-right-radius: 0.375em;
 	border-bottom-left-radius: 0.375em;
 }
@@ -648,7 +647,7 @@ footer {
 /*-------------------------- Start of Body --------------------------*/
 
 body {
-	margin: 0em 1.875em;
+	margin: none;/*0em 1.875em;*/
 	background-image: url("../images/metaltextures032.png");
 }
 /*-------------------------- End of Body --------------------------*/
@@ -673,6 +672,17 @@ h1 {
 	overflow: hidden;
 	border-radius: 0.250em;
 }
+
+/*-------------------------- Start of outerWrapper --------------------------*/
+
+#outerWrapper {
+	width: 95%; /* 65.000em */
+	margin: 0.481538461538% auto; /* 0.313em / 65.000em */
+	background: #7E2217;
+	box-shadow: 0.313em 0.313em 0.313em #504A4B;
+}
+/*-------------------------- End of outerWrapper --------------------------*/
+
 /*-------------------------- End of contentWrapper --------------------------*/
 	
 	h2, h3, h4, h5, h6 {
@@ -795,9 +805,6 @@ nav a:active {
 aside {
 	width: 	98.058252427184%; /* 60.625em / 64.375em */
 	margin: 0.486213592233%; /*0.313em / 64.375em */
-	
-	/*width: 21.747572815534%; /* 14.000em / 64.375em */
-	/*margin: 0.486213592233%; /*0.313em / 64.375em */
 	float: left;
 	background: rgba(225,172,2,0.3);
 	border-radius: 0.375em;
@@ -841,9 +848,6 @@ aside a:hover {
 article {
 	width: 	98.058252427184%; /* 60.625em / 64.375em */
 	margin: 0.486213592233%; /*0.313em / 64.375em */
-	
-	/*width: 75.243495145631%; /* 48.438em / 64.375em */
-	/*margin: 0.486213592233%; /*0.313em / 64.375em */
 	background: url("../images/package_back.jpg");
 	float: left;
 	border-radius: 0.375em;
@@ -899,7 +903,7 @@ footer {
 	margin: 0.625em  0em 0em 0.750em;
 	padding: 1.030927835052%; /* 0.625em / 60.625em */
 	float: right;
-	background: #FFF/*E83F00;*/
+	background: #E83F00;
 	border-bottom-right-radius: 0.375em;
 	border-bottom-left-radius: 0.375em;
 }
@@ -1171,7 +1175,7 @@ footer {
 	margin: 0.486213592233%; /*0.313em / 64.375em */
 	padding: 1.030927835052%; /* 0.625em / 60.625em */
 	float: right;
-	background: #FFF/*E83F00;*/
+	background: #E83F00;
 	border-bottom-right-radius: 0.375em;
 	border-bottom-left-radius: 0.375em;
 }
