--- a/css/main.css
+++ b/css/main.css
@@ -893,6 +893,7 @@ section {
 
 section p {
 	padding: 0.658947368421%; /* 0.313em / 47.500em */
+	display: inline;
 }
 /*-------------------------- End of Section --------------------------*/
 
@@ -1164,7 +1165,9 @@ section {
 }
 
 section p {
-	padding: 0.658947368421%; /* 0.313em / 47.500em */
+	margin: 1.030927835052%;
+	padding: 2em; /* .0625em / 60.625em     0.313em / 47.500em */
+	display: inline;
 }
 /*-------------------------- End of Section --------------------------*/
 
